--- a/index.html
+++ b/index.html
@@ -10,6 +10,41 @@
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-    Sign up
+    <div class="container">
+        <div class="left">
+            <h1>Sign up</h1>
+            <footer>
+                <a href="#">Privacy policy</a>
+                <span>&</span>
+                <a href="#">terms of service</a>
+            </footer>
+        </div>
+        <div class="right">
+            <div class="x">x</div>
+            <form>
+                <div class="form-row">
+                    <label for="username">Username</label>
+                    <input name="username" type="text">
+                </div>
+                <div class="form-row">
+                    <label for="email">E-mail</label>
+                    <input name="email" type="email">
+                </div>
+                <div class="form-row">
+                    <label for="pass">Password</label>
+                    <input name="pass" type="password">
+                </div>
+                <div class="form-row">
+                    <label for="rep-pass">Repeat password</label>
+                    <input name="rep-pass" type="password">
+                </div>
+                <div class="form-row">
+                    <div class="btn">Get started</div>
+                    <span>or</span>
+                    <a href="#">Sign in</a>
+                </div>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
